# rust_study_note

./: README.md
doc/: embedded_rust_study_note.md  english_study_note.md  mahjong.md  rust_study_note.md  rust_study_note_idiom.md  virtual_terminal_study_note.md
doc/docker_study_note/: wsl2-docker-setup-memo.md  wsl2-docker-usage-memo.md
doc/english_study_note/: english_grammar_note.md  english_phrase_note.md  english_study_note.html  english_study_note.md
doc/english_study_note/file/: TOEIC-basic-english-words.html  code-snippets.txt  golden-idiom-430.html  golden-phrases-1000.html  発音記号について印刷用.xlsx
doc/english_study_note/file/js/golden-idiom-430/: station1list.js  station2list.js  station3list.js  station4list.js  station5list.js  supplement2list.js  (+1 more)
doc/powershell_study_note/: powershell_study_note.md  powershell_study_note_idiom.md
doc/statistics_study_note/: statistics_study_note.md
sample/mod_tree/: Cargo.toml
sample/mod_tree/src/: lib.rs  my_module_1.rs  my_module_2.rs
sample/mod_tree/src/my_module_1/: print1.rs
sample/mod_tree/src/my_module_2/: print2.rs
sample/windows-rs_create_window/: Cargo.toml  README.md
sample/windows-rs_create_window/src/: main.rs
sample/windows-rs_key_input/: Cargo.toml  README.md
sample/windows-rs_key_input/src/: console_virtual_terminal.rs  main.rs  win_key_input.rs
sample/workspace_sample/: Cargo.toml
sample/workspace_sample/sample/: Cargo.toml
sample/workspace_sample/sample/src/: main.rs
sample/workspace_sample/subtractor/: Cargo.toml
sample/workspace_sample/subtractor/src/: lib.rs
(+7 files in other folders)
