[package]
name = "mod_tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "modtree"
#crate-type = "rlib" # msvcでcrate-typeを指定するとビルドエラーになる。
path = "src/lib.rs"

#[[bin]]
#name = "mod_tree"
#path = "src/main.rs"
